# V8

./: .env.example  .gitignore  Cargo.toml  Cargo.toml.bak.20260531  README.md  TODO.md  _n150_check.py  _n150_check2.py  _n150_compile.py  _n150_sync.py  build.rs  conftest.py  docker-compose.yml  push_via_api.py  pyproject.toml  run_bridge.sh  start_bridge.sh  v8_core_engine.pyi.bak  v8_dry_run.py  v8_fix_audit_20260530.md  v8_ws_bridge.py
adapters/: __init__.py  okx_rest.py  okx_ws.py  okx_ws.rs  okx_ws_live.py  redis_feed.py
alpha/: __init__.py
alpha/crypto/: __init__.py  counterfactual_labeler.py  counterfactual_labeler.py.bak  cross_engine.py  cross_reader.py  funding_rate_arb.py  obi_v2.py
calibration/: __init__.py  alphacast_online_update.py  confidence_calibrator.py  temperature_scaling.py
common/: __init__.py  config.py  engine.py  engine.py.bak  logging_setup.py
config/: README.md  api_keys.yaml  settings.py  settings.yaml  v8.yaml  v8_btc.yaml  v8_btc.yaml.bak  v8_btc.yaml.bak_exchange2  v8_eth.yaml  v8_eth.yaml.bak  v8_eth.yaml.bak_exchange2
core/: build.rs
core/src/: buffer.rs  exec_channels.rs  feature_engine.rs  lib.rs  mcts_core.rs  okx_router.rs  okx_ws.rs  order_state.rs  proto_types.rs
data/: __init__.py  batch_pipeline.py  cfl_inline.py  market_data.py  orderbook.py  prepare_training_data.py  shm_bridge.py  sqlite_price_recorder.py  sqlite_price_recorder.py.bak  train_small.py
data/features_kline/: features_aave.parquet  features_ada.parquet  features_apt.parquet  features_arb.parquet  features_atom.parquet  features_avax.parquet  features_bch.parquet  features_bnb.parquet  features_bonk.parquet  features_btc.parquet  features_cfx.parquet  features_crv.parquet  features_doge.parquet  features_dot.parquet  features_ena.parquet  features_eth.parquet  features_fil.parquet  features_floki.parquet  features_gala.parquet  features_hmstr.parquet  features_inj.parquet  features_jto.parquet  features_jup.parquet  features_link.parquet  features_ltc.parquet  features_meme.parquet  features_move.parquet  features_near.parquet  features_neiro.parquet  features_ondo.parquet  features_op.parquet  features_pendle.parquet  features_pepe.parquet  features_pump.parquet  features_pyth.parquet  features_render.parquet  features_sats.parquet  features_sei.parquet  features_shib.parquet  features_sol.parquet  (+10 more)
data/klines_5m/: aave_5m_60d.parquet  ada_5m_60d.parquet  apt_5m_60d.parquet  arb_5m_60d.parquet  atom_5m_60d.parquet  avax_5m_60d.parquet  bch_5m_60d.parquet  bnb_5m_60d.parquet  bonk_5m_60d.parquet  btc_5m_60d.parquet  cfx_5m_60d.parquet  crv_5m_60d.parquet  doge_5m_60d.parquet  dot_5m_60d.parquet  ena_5m_60d.parquet  eth_5m_60d.parquet  fil_5m_60d.parquet  floki_5m_60d.parquet  gala_5m_60d.parquet  hmstr_5m_60d.parquet  inj_5m_60d.parquet  jto_5m_60d.parquet  jup_5m_60d.parquet  link_5m_60d.parquet  ltc_5m_60d.parquet  meme_5m_60d.parquet  move_5m_60d.parquet  near_5m_60d.parquet  neiro_5m_60d.parquet  ondo_5m_60d.parquet  op_5m_60d.parquet  pendle_5m_60d.parquet  pepe_5m_60d.parquet  pump_5m_60d.parquet  pyth_5m_60d.parquet  (+15 more)
doc/: phase1.md  qts_v8_dev_spec.html  qts_v8_okx_devplan.html  quant_system_v8_blueprint.html  quant_system_v8_structure.md  v8-cleanup_20260531.md  v8-dev-doc_20260531.md
evolution/: pipeline.py
features/: cross_section.py  feature_fusion.py  offline_feature_engine.py
gating/: __init__.py  cross_section.py  hard_gating.py
harness/: __init__.py  logging_handler.py  pipeline_v1.py  pipeline_v2.py
labeling/: __init__.py  batch_cfl.py  counterfactual_labeler.py  counterfactual_labeler.py.clean  counterfactual_labeler.py.fixed
ml/: __init__.py  meta_labeler.py
models/: triton_common.py
monitor/: __init__.py  dashboard.py  performance_tracker.py  pnl_tracker.py  system_health.py
orchestrator/: __init__.py  alerting.py  main.py  main_loop.py  main_loop.py.bak  main_loop.py.bak_exchange  main_loop.py.bak_exit  main_loop.py.bak_live  main_loop.py.bak_p5
python/: __init__.py
schemas/: alpha_signal.proto  alphacast_output.proto  market_data.proto  okx_order.proto
scripts/: run_cfl_label.py  train_alphacast.py
tests/: conftest.py  load_test.py  smoke_test.sql  test_config.py  test_market_data.py  test_okx_rest.py  test_orderbook.py  test_risk_manager.py
tools/: eval_replay.py
triton_model_repository/: README.md
(+194 files in other folders)
